## Makefile.am

# due to a limitation of `autoreconf',
# all -I directives currently must be set on a single line
ACLOCAL_AMFLAGS = -I gnulib/m4 -I m4

SUBDIRS = gnulib/src \
          lib \
          frontend
EXTRA_DIST = bootstrap \
             bootstrap.conf \
             FTL.TXT \
             GPLv2.TXT \
             README \
             TODO \
             gnulib/m4/gnulib-cache.m4

## end of Makefile.am
