## Makefile.am

# Copyright (C) 2011 by Werner Lemberg.
#
# This file is part of the ttfautohint library, and may only be used,
# modified, and distributed under the terms given in `COPYING'.  By
# continuing to use, modify, or distribute this file you indicate that you
# have read `COPYING' and understand and accept it fully.
#
# The file `COPYING' mentioned in the previous paragraph is distributed
# with the ttfautohint library.

AM_CPPFLAGS = $(FREETYPE_CPPFLAGS)

noinst_LIBRARIES = libttfautohint.a
libttfautohint_a_SOURCES = ta.h \
                           tabytecode.c tabytecode.h \
                           tacvt.c \
                           tadsig.c \
                           tadummy.c tadummy.h \
                           taerror.c \
                           tafile.c \
                           tafont.c \
                           tafpgm.c \
                           tagasp.c \
                           tagloadr.c tagloadr.h \
                           taglobal.c taglobal.h \
                           taglyf.c \
                           tagpos.c \
                           tahints.c tahints.h \
                           tahmtx.c \
                           talatin.c talatin.h \
                           taloader.c taloader.h \
                           taloca.c \
                           tamaxp.c \
                           tapost.c \
                           taprep.c \
                           tasfnt.c \
                           tasort.c tasort.h \
                           tatables.c tatables.h \
                           tatime.c \
                           tattc.c \
                           tattf.c \
                           tatypes.h \
                           ttfautohint.c ttfautohint.h ttfautohint-errors.h

## end of Makefile.am
